--- a/views/contest_ranklist.ejs
+++ b/views/contest_ranklist.ejs
@@ -18,6 +18,10 @@
                   <th>通过数量</th>
                   <th>罚时</th>
                 <% } %>
+                <% if (contest.type === 'cs208') { %>
+                  <th>通过数量</th>
+                  <th>罚时</th>
+                <% } %>
                 <% for (let i = 0; i < problems.length; i++) { %>
                 <th>
                   <a href="<%= syzoj.utils.makeUrl(['contest', contest.id, 'problem', i + 1]) %>">
@@ -38,6 +42,7 @@
                 i++;
                 let condition;
                 if (contest.type === 'acm') condition = item.player.score_details[problem.id] && item.player.score_details[problem.id].accepted && (minPos === -1 || item.player.score_details[problem.id].acceptedTime < min.player.score_details[problem.id].acceptedTime);
+                else if (contest.type === 'cs208') condition = item.player.score_details[problem.id] && item.player.score_details[problem.id].accepted && (minPos === -1 || item.player.score_details[problem.id].acceptedTime < min.player.score_details[problem.id].acceptedTime);
                 else condition = item.player.score_details[problem.id] && item.player.score_details[problem.id].score === 100 && (minPos === -1 || item.player.score_details[problem.id].judge_state.submit_time < min.player.score_details[problem.id].judge_state.submit_time);
                 if (condition) {
                   min = item;
@@ -57,6 +62,16 @@
                   if (contest.type === 'noi' || contest.type === 'ioi') {
                     if (i === 1 || item.player.score !== lastItem.player.score) rank = i;
                   } else if (contest.type === 'acm') {
+                    for (let problem of problems) {
+                      if (item.player.score_details[problem.id] && item.player.score_details[problem.id].accepted) {
+                        timeSum += (item.player.score_details[problem.id].acceptedTime - contest.start_time) + (item.player.score_details[problem.id].unacceptedCount * 20 * 60);
+                        unacceptedCount += item.player.score_details[problem.id].unacceptedCount;
+                      }
+                    }
+                    item.player.timeSum = timeSum;
+
+                    if (i === 1 || item.player.score !== lastItem.player.score || item.player.timeSum !== lastItem.player.timeSum) rank = i;
+                  } else if (contest.type === 'cs208') {
                     for (let problem of problems) {
                       if (item.player.score_details[problem.id] && item.player.score_details[problem.id].accepted) {
                         timeSum += (item.player.score_details[problem.id].acceptedTime - contest.start_time) + (item.player.score_details[problem.id].unacceptedCount * 20 * 60);
@@ -92,6 +107,16 @@
                     <%= syzoj.utils.formatTime(timeSum) %>
                   </td>
                 <% } %>
+                <% if (contest.type === 'cs208') { %>
+                  <td>
+                    <span class="score score_<%= parseInt((item.player.score / ranklist[0].player.score * 10) || 0) %>">
+                      <%= item.player.score %>
+                    </span>
+                  </td>
+                  <td>
+                    <%= syzoj.utils.formatTime(timeSum) %>
+                  </td>
+                <% } %>
                 <% for (let problem of problems) { %>
                   <% if (problem.min === i) { %>
                     <td style="background: rgb(244, 255, 245); ">
@@ -99,6 +124,27 @@
                     <td>
                   <% } %>
                   <% if (!item.player.score_details[problem.id]) { %>
+                    </td>
+                  <% } else if (contest.type === 'cs208') { %>
+                      <a href="<%= syzoj.utils.makeUrl(['submission', item.player.score_details[problem.id].judge_id]) %>">
+                        <% if (item.player.score_details[problem.id].accepted) { %>
+                          <span class="score score_10">
+                            <% if (item.player.score_details[problem.id].unacceptedCount) { %>
+                              +<%= item.player.score_details[problem.id].unacceptedCount %>
+                            <% } else { %>
+                              +
+                            <% } %>
+                          </span>
+
+                          <div class="submit_time">
+                            <%= syzoj.utils.formatTime(item.player.score_details[problem.id].acceptedTime - contest.start_time) %>
+                          </div>
+                        <% } else if (item.player.score_details[problem.id].unacceptedCount) { %>
+                          <span class="score score_0">
+                            -<%= item.player.score_details[problem.id].unacceptedCount %>
+                          </span>
+                        <% } %>
+                      </a>
                     </td>
                   <% } else if (contest.type === 'acm') { %>
                       <a href="<%= syzoj.utils.makeUrl(['submission', item.player.score_details[problem.id].judge_id]) %>">
