--- a/views/contest_edit.ejs
+++ b/views/contest_edit.ejs
@@ -53,6 +53,12 @@
                   <label for="type-acm">ICPC</label>
                 </div>
               </div>
+              <div class="field">
+                <div class="ui radio checkbox">
+                  <input <% if (contest.id) { %>disabled <% } %>type="radio" name="type" id="type-cs208" value="cs208"<% if (contest.type === 'cs208') { %> checked="checked"<% } %>>
+                  <label for="type-acm">CS208</label>
+                </div>
+              </div>
             </div>
             <div class="field">
                 <label>排行参数（格式：<code>{ "题目 ID": 分值倍数 }</code>）</label>
