--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<% this.title = '首页'; %>
+<% this.title = 'Home'; %>
 <% include header %>
 <div class="padding">
   <div class="ui three column grid">
