--- a/views/contests.ejs
+++ b/views/contests.ejs
@@ -1,4 +1,4 @@
-<% this.title = '比赛' %>
+<% this.title = 'Contest' %>
 <% include header %>
 <div class="padding">
     <% if (contests.length) { %>
@@ -29,11 +29,11 @@
         %>
         <tr>
           <% if (now < contest.start_time) { %>
-            <% tag = '<span class="ui header"><div class="ui mini red label">未开始</div></span>' %>
+            <% tag = '<span class="ui header"><div class="ui mini red label">Not started</div></span>' %>
           <% } else if (now >= contest.start_time && now < contest.end_time) { %>
-            <% tag = '<span class="ui header"><div class="ui mini green label">进行中</div></span>' %>
+            <% tag = '<span class="ui header"><div class="ui mini green label">In progress</div></span>' %>
           <% } else { %>
-            <% tag = '<span class="ui header"><div class="ui mini grey label">已结束</div></span>' %>
+            <% tag = '<span class="ui header"><div class="ui mini grey label">Finished</div></span>' %>
           <% } %>
 
           <td><a href="<%= syzoj.utils.makeUrl(['contest', contest.id]) %>"><%= contest.title %> <%- tag %></a></td>
