--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,13 +14,13 @@
           <div class="field">
             <div class="ui left icon input">
               <i class="user icon"></i>
-              <input name="email" placeholder="用户名" type="text" id="username" onkeydown="key_login(event)">
+              <input name="email" placeholder="Username" type="text" id="username" onkeydown="key_login(event)">
             </div>
           </div>
           <div class="field">
             <div class="ui left icon input">
               <i class="lock icon"></i>
-              <input name="password" placeholder="密码" type="password" id="password" onkeydown="key_login(event)">
+              <input name="password" placeholder="Password" type="password" id="password" onkeydown="key_login(event)">
             </div>
           </div>
           <div class="ui fluid large submit button" id="login">登录</div>
@@ -31,8 +31,8 @@
       </form>
 
       <div class="ui message">
-        <a href="/sign_up">注册账号</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="<%= syzoj.utils.makeUrl(['forget']) %>">忘记密码</a>
+        <a href="/sign_up">Sign up</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="<%= syzoj.utils.makeUrl(['forget']) %>">Forget password</a>
       </div>
     </div>
   </div>
@@ -66,10 +66,8 @@ function login() {
             error_code = data.error_code;
             switch (error_code) {
                 case 1001:
-                    show_error("用户不存在");
-                    break;
                 case 1002:
-                    show_error("密码错误");
+                    show_error("Wrong username or password");
                     break;
                 case 1003:
                     show_error("您尚未设置密码，请通过下方「找回密码」来设置您的密码。");
@@ -81,13 +79,13 @@ function login() {
                     show_error("未知错误");
                     break;
             }
-            $("#login").text("登录");
+            $("#login").text("Log in");
             $("#login").removeClass("loading");
         },
         error:  function(XMLHttpRequest, textStatus, errorThrown) {
             alert(XMLHttpRequest.responseText);
             show_error("未知错误");
-            $("#login").text("登录");
+            $("#login").text("Log in");
         }
     });
 }
