--- a/views/contests.ejs
+++ b/views/contests.ejs
@@ -7,7 +7,7 @@
       <div class="inline fields" style="margin-bottom: 25px; white-space: nowrap; ">
         <a href="<%= syzoj.utils.makeUrl(['contest', 0, 'edit']) %>" class="ui mini labeled icon right floated button" style="margin-left: auto; ">
           <i class="ui icon write"></i>
-          添加比赛
+          Create a contest
         </a>
      </div>
     </form>
@@ -15,10 +15,10 @@
     <table class="ui very basic center aligned table">
       <thead>
         <tr>
-          <th>比赛名称</th>
-          <th>开始时间</th>
-          <th>结束时间</th>
-          <th>描述</th>
+          <th>Title</th>
+          <th>Start At</th>
+          <th>End At</th>
+          <th>Description</th>
         </tr>
       </thead>
       <tbody>
