--- a/views/help.ejs
+++ b/views/help.ejs
@@ -1,7 +1,7 @@
-<% this.title = '帮助' %>
+<% this.title = 'Help' %>
 <% include header %>
 <div class="padding">
-    <h1 class="ui center aligned header">帮助</h1>
+    <h1 class="ui center aligned header">Help</h1>
     <div style="font-content">
         <h2 class="ui header">评测</h2>
         <p>
