--- a/views/contest_ranklist.ejs
+++ b/views/contest_ranklist.ejs
@@ -13,14 +13,14 @@
             <thead>
             <tr>
                 <th>#</th>
-                <th>用户名</th>
+                <th>User</th>
                 <% if (contest.type === 'acm') { %>
                   <th>通过数量</th>
                   <th>罚时</th>
                 <% } %>
                 <% if (contest.type === 'cs208') { %>
-                  <th>通过数量</th>
-                  <th>罚分</th>
+                  <th>Problems Accepted</th>
+                  <th>Penalty</th>
                 <% } %>
                 <% for (let i = 0; i < problems.length; i++) { %>
                 <th>
@@ -29,8 +29,8 @@
                   </a>
                 </th>
                 <% } %>
-                <% if (contest.type === 'noi' || contest.type === 'ioi') { %>
-                  <th>总分</th>
+                <% if (contest.type === 'noi' || contest.type === 'ioi' || contest.type === 'cs208') { %>
+                  <th>Final score</th>
                 <% } %>
             </tr>
             </thead>
@@ -196,6 +196,16 @@
                     </div>
                   </td>
                 <% } %>
+                <% if (contest.type === 'cs208') { %>
+                  <td>
+                    <span class="score score_<%= parseInt((item.player.score / ranklist[0].player.score * 10) || 0) %>">
+                      <%= item.player.score %>
+                    </span>
+                    <div class="submit_time">
+                      <%= syzoj.utils.formatTime(latest - contest.start_time) %>
+                    </div>
+                  </td>
+                <% } %>
             </tr>
             <% lastItem = item; %>
             <% } %>
@@ -206,7 +216,7 @@
 <div class="ui placeholder segment" style="margin-top: 0px; ">
   <div class="ui icon header">
     <i class="ui file icon" style="margin-bottom: 20px; "></i>
-    暂无选手提交
+    No submission
   </div>
 </div>
 <% } %>
