--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,13 @@
 <div class="padding">
   <div class="ui three column grid">
     <div class="eleven wide column">
-      <h4 class="ui top attached block header"><i class="ui info icon"></i>公告</h4>
+      <h4 class="ui top attached block header"><i class="ui info icon"></i>Broadcast</h4>
       <div class="ui bottom attached segment">
         <table class="ui very basic table">
           <thead>
             <tr>
-              <th>标题</th>
-              <th>时间</th>
+              <th>Title</th>
+              <th>Time</th>
             </tr>
           </thead>
           <tbody>
@@ -22,14 +22,14 @@
           </tbody>
         </table>
       </div>
-      <h4 class="ui top attached block header"><i class="ui signal icon"></i>排名</h4>
+      <h4 class="ui top attached block header"><i class="ui signal icon"></i>Rank</h4>
       <div class="ui bottom attached segment">
         <table class="ui very basic center aligned table" style="table-layout: fixed; ">
           <thead>
             <tr>
 	            <th style="width: 50px; ">#</th>
-	            <th style="width: 170px; ">用户名</th>
-	            <th>个性签名</th>
+	            <th style="width: 170px; ">Username</th>
+	            <th>Biography</th>
             </tr>
           </thead>
           <script data-cfasync="false">
