--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -2,9 +2,9 @@
 <%
 if (typeof contest === 'undefined') contest = null;
 if (contest) {
-  this.title = this.alpha(pid) + '. ' + syzoj.utils.removeTitleTag(problem.title) + ' - ' + contest.title + ' - 比赛';
+  this.title = this.alpha(pid) + '. ' + syzoj.utils.removeTitleTag(problem.title) + ' - ' + contest.title + ' - Contest';
 } else {
-  this.title = problem.title + ' - 题目';
+  this.title = problem.title + ' - Problem';
 }
 %>
 <% include header %>
@@ -33,27 +33,27 @@ if (contest) {
     </div>
     <% if (problem.type !== 'submit-answer') { %>
       <div class="row" style="margin-top: -15px">
-          <span class="ui label">内存限制：<%= problem.memory_limit %> MiB</span>
-          <span class="ui label">时间限制：<%= problem.time_limit %> ms</span>
+          <span class="ui label">Memory Limit：<%= problem.memory_limit %> MiB</span>
+          <span class="ui label">Time Limit：<%= problem.time_limit %> ms</span>
           <% if (problem.type === 'interaction') { %>
             <span class="ui label">题目类型：交互</span>
           <% } else if (problem.file_io) { %>
-            <span class="ui label">输入文件：<%= problem.file_io_input_name %></span>
-            <span class="ui label">输出文件：<%= problem.file_io_output_name %></span>
+            <span class="ui label">Input File：<%= problem.file_io_input_name %></span>
+            <span class="ui label">Output File：<%= problem.file_io_output_name %></span>
           <% } else { %>
-            <span class="ui label">标准输入输出</span>
+            <span class="ui label">Standard Input/Output</span>
           <% } %>
       </div>
     <% } %>
     <% if (problem.type !== 'interaction') { %>
       <div class="row" style="margin-top: -<%= problem.type === 'submit-answer' ? 15 : 23 %>px">
-          <span class="ui label">题目类型：<%= { 'submit-answer': '答案提交', 'interaction': '交互', 'traditional': '传统' }[problem.type] %></span>
-          <span class="ui label">评测方式：<%= (testcases && !testcases.error) ? (testcases.spj ? 'Special Judge' : '文本比较') : '无测试数据' %></span>
+          <span class="ui label">Problem Type：<%= { 'submit-answer': 'Submit-Answer', 'interaction': 'Interaction', 'traditional': 'Traditional' }[problem.type] %></span>
+          <span class="ui label">Judge Method：<%= (testcases && !testcases.error) ? (testcases.spj ? 'Special Judge' : 'Text Comparation') : 'No testdata' %></span>
       </div>
     <% } %>
     <% if (!contest) { %>
         <div class="row" style="margin-top: -23px">
-            <span class="ui label">上传者：
+            <span class="ui label">Uploaded by：
             <% if (problem.is_anonymous && !problem.allowedManage) { %>
               匿名
             <% } else { %>
@@ -61,7 +61,7 @@ if (contest) {
             <% } %>
             </span>
             <% if (problem.allowedManage) { %>
-                <span class="ui label">公开者：
+                <span class="ui label">Published by：
                 <% if (problem.publicizer) { %>
                   <a href="<%= syzoj.utils.makeUrl(['user', problem.publicizer_id]) %>"><%= problem.publicizer.username %></a>
                 <% } else { %>
@@ -78,18 +78,18 @@ if (contest) {
       <div class="ui buttons">
         <% if (typeof contest !== 'undefined' && contest) { %>
           <% if (!contest.ended) { %>
-            <a class="small ui primary button" href="#submit_code">提交</a>
+            <a class="small ui primary button" href="#submit_code">Submit</a>
           <% } else { %>
-            <a class="small ui primary button" href="<%= syzoj.utils.makeUrl(['problem', problem.id]) %>">转到题库</a>
+            <a class="small ui primary button" href="<%= syzoj.utils.makeUrl(['problem', problem.id]) %>">Back to Problems</a>
           <% } %>
-          <a class="small ui positive button" href="<%= syzoj.utils.makeUrl(['contest', contest.id, 'submissions'], { problem_id: pid }) %>">提交记录</a>
+          <a class="small ui positive button" href="<%= syzoj.utils.makeUrl(['contest', contest.id, 'submissions'], { problem_id: pid }) %>">Submissions</a>
           <% if (problem.additional_file) { %>
-            <a class="small ui teal button" href="<%= syzoj.utils.makeUrl(['contest', contest.id, pid, 'download', 'additional_file']) %>">附加文件</a>
+            <a class="small ui teal button" href="<%= syzoj.utils.makeUrl(['contest', contest.id, pid, 'download', 'additional_file']) %>">Additional Files</a>
           <% } %>
-          <a href="<%= syzoj.utils.makeUrl(['contest', contest.id]) %>" class="ui orange button">返回比赛</a>
+          <a href="<%= syzoj.utils.makeUrl(['contest', contest.id]) %>" class="ui orange button">Back to Contest</a>
         <% } else { %>
           <% if (testcases && !testcases.error) { %>
-            <a class="small ui primary button" href="#submit_code">提交</a>
+            <a class="small ui primary button" href="#submit_code">Submit</a>
           <% } %>
           <a class="small ui positive button" href="<%= syzoj.utils.makeUrl(['submissions'], { problem_id: problem.id }) %>">提交记录</a>
           <a class="small ui orange button" href="<%= syzoj.utils.makeUrl(['problem', problem.id, 'statistics', problem.type === 'submit-answer' ? 'shortest' : 'fastest']) %>">统计</a>
@@ -147,7 +147,7 @@ if (contest) {
   <% if (problem.description) { %>
   <div class="row">
     <div class="column">
-      <h4 class="ui top attached block header">题目描述</h4>
+      <h4 class="ui top attached block header">Description</h4>
       <div class="ui bottom attached segment font-content"><%- problem.description %></div>
     </div>
   </div>
@@ -155,7 +155,7 @@ if (contest) {
   <% if (problem.input_format) { %>
   <div class="row">
     <div class="column">
-        <h4 class="ui top attached block header">输入格式</h4>
+        <h4 class="ui top attached block header">Input format</h4>
         <div class="ui bottom attached segment font-content"><%- problem.input_format %></div>
     </div>
   </div>
@@ -163,7 +163,7 @@ if (contest) {
   <% if (problem.output_format) { %>
     <div class="row">
         <div class="column">
-          <h4 class="ui top attached block header">输出格式</h4>
+          <h4 class="ui top attached block header">Output format</h4>
           <div class="ui bottom attached segment font-content"><%- problem.output_format %></div>
         </div>
     </div>
@@ -171,7 +171,7 @@ if (contest) {
   <% if (problem.example) { %>
     <div class="row">
         <div class="column">
-          <h4 class="ui top attached block header">样例</h4>
+          <h4 class="ui top attached block header">Samples</h4>
           <div class="ui bottom attached segment font-content"><%- problem.example %></div>
         </div>
     </div>
@@ -179,7 +179,7 @@ if (contest) {
   <% if (problem.limit_and_hint) { %>
     <div class="row">
         <div class="column">
-          <h4 class="ui top attached block header">数据范围与提示</h4>
+          <h4 class="ui top attached block header">Limitations & Hints</h4>
           <div class="ui bottom attached segment font-content"><%- problem.limit_and_hint %></div>
         </div>
     </div>
