--- a/views/contest_ranklist.ejs
+++ b/views/contest_ranklist.ejs
@@ -20,7 +20,7 @@
                 <% } %>
                 <% if (contest.type === 'cs208') { %>
                   <th>Problems Accepted</th>
-                  <th>Penalty</th>
+                  <!-- <th>Penalty</th> -->
                 <% } %>
                 <% for (let i = 0; i < problems.length; i++) { %>
                 <th>
@@ -107,7 +107,7 @@
                     <%= syzoj.utils.formatTime(timeSum) %>
                   </td>
                 <% } %>
-                <% if (contest.type === 'cs208') { %>
+                <!-- <% if (contest.type === 'cs208') { %>
                   <td>
                     <span class="score score_<%= parseInt((item.player.score / ranklist[0].player.score * 10) || 0) %>">
                       <%= item.player.score %>
@@ -116,7 +116,7 @@
                   <td>
                     <%= -timeSum %>
                   </td>
-                <% } %>
+                <% } %> -->
                 <% for (let problem of problems) { %>
                   <% if (problem.min === i) { %>
                     <td style="background: rgb(244, 255, 245); ">
@@ -130,9 +130,9 @@
                         <% if (item.player.score_details[problem.id].accepted) { %>
                           <span class="score score_10">
                             <% if (item.player.score_details[problem.id].unacceptedCount) { %>
-                              +<%= item.player.score_details[problem.id].unacceptedCount %>
+                              100-5*<%= item.player.score_details[problem.id].unacceptedCount %>
                             <% } else { %>
-                              +
+                              100
                             <% } %>
                           </span>
 
@@ -141,7 +141,7 @@
                           </div>
                         <% } else if (item.player.score_details[problem.id].unacceptedCount) { %>
                           <span class="score score_0">
-                            -<%= item.player.score_details[problem.id].unacceptedCount %>
+                            -5*<%= item.player.score_details[problem.id].unacceptedCount %>
                           </span>
                         <% } %>
                       </a>
