--- a/views/contest_ranklist.ejs
+++ b/views/contest_ranklist.ejs
@@ -100,7 +100,7 @@
                 <% if (contest.type === 'acm') { %>
                   <td>
                     <span class="score score_<%= parseInt((item.player.score / ranklist[0].player.score * 10) || 0) %>">
-                      <%= item.player.score %>
+                      <%= item.player.ac_num%>
                     </span>
                   </td>
                   <td>
