--- a/views/admin_header.ejs
+++ b/views/admin_header.ejs
@@ -3,6 +3,7 @@ let items = {
   info: '统计信息',
   config: '系统配置',
   privilege: '权限管理',
+  usergroup: '用户组',
   rejudge: '一键重测',
   links: '友链管理',
   rating: '积分管理',
