--- a/views/contests.ejs
+++ b/views/contests.ejs
@@ -15,6 +15,7 @@
     <table class="ui very basic center aligned table">
       <thead>
         <tr>
+          <th>权限</th>
           <th>比赛名称</th>
           <th>开始时间</th>
           <th>结束时间</th>
@@ -36,7 +37,29 @@
             <% tag = '<span class="ui header"><div class="ui mini grey label">已结束</div></span>' %>
           <% } %>
 
-          <td><a href="<%= syzoj.utils.makeUrl(['contest', contest.id]) %>"><%= contest.title %> <%- tag %></a></td>
+          <td>
+            <% if (accessibility[contest.id].isContestant) { %>
+              <i class="check green icon"></i>
+            <% } else { %>
+              <i class="x red icon"></i>
+            <% } %>
+            <% if (accessibility[contest.id].isAdmin) { %>
+              <i class="user yellow icon"></i>
+            <% } %>
+          </td>
+
+          <td>
+            <% if (accessibility[contest.id].isContestant) { %>
+              <a href="<%= syzoj.utils.makeUrl(['contest', contest.id]) %>">
+                <%= contest.title %>
+                <%- tag %>
+              </a>
+            <% } else {%>
+              <%= contest.title %>
+              <%- tag %>
+            <% } %>
+          </td>
+
           <td><%= syzoj.utils.formatDate(contest.start_time) %></td>
           <td><%= syzoj.utils.formatDate(contest.end_time) %></td>
           <td class="font-content"><%- contest.subtitle %></td>
